--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="portstyle.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/2b04912ecd.js" crossorigin="anonymous"></script>
 </head>
 <body>
