--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 
 
                 <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100067837096781"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fmsng.link%2Fo%3Ftadbir_naeem%3Dig%26fbclid%3DIwAR0MuJ7YhaDyC-IsAM_djBCj2_7RxArebcVBydhw2tXNv7xEopwJyBHuTTk&h=AT3v1gH_gRncOKubD4QoxIUjV50nDsfoCd9JDaNlHdpI1EhSzB84X4_gsok-TpW4QrPIRbLIYHHxjOiADwSEzdM7CNtUEIjazWvQMAqcca8kwver2ghHtk4csSMDOF3wmwiegA"><i class="fa-brands fa-instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#contact"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#contact"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#contact"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwa.link%2Fxj6qo5%3Ffbclid%3DIwAR2knlAU8AP7xRsIViG3w51EnNz7OcjmPIe0MkHgZwaqh8PKL95xc50hei0&h=AT3v1gH_gRncOKubD4QoxIUjV50nDsfoCd9JDaNlHdpI1EhSzB84X4_gsok-TpW4QrPIRbLIYHHxjOiADwSEzdM7CNtUEIjazWvQMAqcca8kwver2ghHtk4csSMDOF3wmwiegA"><i class="fa-brands fa-whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#contact"><i class="fa-brands fa-whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <a href="img/beautiful.avif" download class="btn btn2">Download CV</a>
             
