--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <a href="#contact"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#contact"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#contact"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#contact"><i class="fa-brands fa-whatsapp"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#contact"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <a href="img/beautiful.avif" download class="btn btn2">Download CV</a>
             
